bert and vgg done

--- a/bert.ipynb
+++ b/bert.ipynb
@@ -333,6 +333,8 @@
     }
    ],
    "source": [
+    "#THIS GETS PREDICTIONS\n",
+    "\n",
     "import tensorflow as tf\n",
     "from transformers import BertTokenizer, TFBertForSequenceClassification, TFBertModel\n",
     "import numpy as np\n",
@@ -422,7 +424,7 @@
     }
    ],
    "source": [
-    "# ... (Your existing code remains the same)\n",
+    "# THIS GETS EMBEDDINGS\n",
     "\n",
     "# Fine-tune the model\n",
     "custom_model.fit(train_dataset, epochs=3, verbose=1)  # Adjust epochs as needed\n",
@@ -524,6 +526,8 @@
     }
    ],
    "source": [
+    "#THIS IS USELESS ATM\n",
+    "\n",
     "import tensorflow as tf\n",
     "from transformers import BertTokenizer, TFBertModel\n",
     "\n",
