--- a/fusion.ipynb
+++ b/fusion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,103 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sr No.</th>\n",
-       "      <th>Utterance</th>\n",
-       "      <th>Speaker</th>\n",
-       "      <th>Emotion</th>\n",
-       "      <th>Sentiment</th>\n",
-       "      <th>Dialogue_ID</th>\n",
-       "      <th>Utterance_ID</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Episode</th>\n",
-       "      <th>StartTime</th>\n",
-       "      <th>EndTime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>533</td>\n",
-       "      <td>Come on.</td>\n",
-       "      <td>Phoebe</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>49</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>00:09:33,447</td>\n",
-       "      <td>00:09:34,447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>445</td>\n",
-       "      <td>I thought I was a complete idiot.</td>\n",
-       "      <td>Rachel</td>\n",
-       "      <td>surprise</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>5</td>\n",
-       "      <td>00:06:37,605</td>\n",
-       "      <td>00:06:40,857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>701</td>\n",
-       "      <td>Hi! Hey!</td>\n",
-       "      <td>All</td>\n",
-       "      <td>joy</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>67</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0:02:01,205</td>\n",
-       "      <td>0:02:01,361</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Sr No.                          Utterance Speaker   Emotion Sentiment  \\\n",
-       "0     533                           Come on.  Phoebe   neutral   neutral   \n",
-       "1     445  I thought I was a complete idiot.  Rachel  surprise  positive   \n",
-       "2     701                           Hi! Hey!     All       joy  positive   \n",
-       "\n",
-       "   Dialogue_ID  Utterance_ID  Season  Episode     StartTime       EndTime  \n",
-       "0           49             8       1       23  00:09:33,447  00:09:34,447  \n",
-       "1           40             0       8        5  00:06:37,605  00:06:40,857  \n",
-       "2           67             1       6       19   0:02:01,205   0:02:01,361  "
+       "array(['sadness', 'surprise', 'neutral', 'joy', 'anger', 'disgust',\n",
+       "       'fear'], dtype=object)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,8 +51,8 @@
     "df = pd.read_csv('MELD.Raw/dev_sent_emo.csv',encoding='utf-8')\n",
     "df['Utterance'] = df.Utterance.str.replace('',\"'\")\n",
     "# df['gender'] = df.Speaker.apply(lambda x: 'male' if x == 'Ross' or x == 'Joey' or x == 'Chandler' else 'female')\n",
-    "df = df.sample(n=3,ignore_index=True)\n",
-    "df"
+    "# df = df.sample(n=3,ignore_index=True)\n",
+    "df.Emotion.unique()"
    ]
   },
   {
