--- a/voting system.ipynb
+++ b/voting system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,24 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: 0.20314361, visual: 0.21836657\n",
+      "text: 0.19852415, visual: 0.21510258\n",
       "vis wins\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'disgust'"
+       "'sadness'"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
