vgg16 xfer learning

--- a/voting system.ipynb
+++ b/voting system.ipynb
@@ -9,8 +9,7 @@
     "# Late fusion technique\n",
     "import numpy as np\n",
     "\n",
-    "emotions = ['sadness', 'surprise', 'neutral', 'joy', 'anger', 'disgust',\n",
-    "       'fear']\n",
+    "emotions = ['sadness', 'surprise', 'neutral', 'joy', 'anger', 'disgust','fear']\n",
     "\n",
     "def final_pred(text_model_prediction, visual_model_prediction):\n",
     "\n",
