added plots code

--- a/final.ipynb
+++ b/final.ipynb
@@ -2989,6 +2989,36 @@
    "source": [
     "final_preds(text_predictions, video_predictions, df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set_theme()\n",
+    "\n",
+    "plt.figure(figsize=(12,5))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.xticks([i for i in range(0,20)])\n",
+    "plt.xlabel('epochs')\n",
+    "plt.ylabel('loss')\n",
+    "plt.legend(['train','validation'],loc='upper right')\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])\n",
+    "plt.xlabel('epochs')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.legend(['train','validation'],loc='lower right')\n",
+    "plt.xticks([i for i in range(0,20)])\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
