--- a/scheduler.ipynb
+++ b/scheduler.ipynb
@@ -27,6 +27,7 @@
     "import os\n",
     "import re\n",
     "\n",
+    "\n",
     "import keras\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from tensorflow.keras.layers import Dense, Input, Flatten, Dropout\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -131,73 +132,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3705</td>\n",
-       "      <td>!</td>\n",
+       "      <td>56</td>\n",
+       "      <td>I'm so proud of you.</td>\n",
        "      <td>Ross</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>369</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>00:20:26,475</td>\n",
-       "      <td>00:20:27,725</td>\n",
+       "      <td>joy</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0:20:40,614</td>\n",
+       "      <td>0:20:41,991</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7477</td>\n",
-       "      <td>Whoa what?</td>\n",
-       "      <td>Rachel</td>\n",
-       "      <td>surprise</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>747</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0:08:08,237</td>\n",
-       "      <td>0:08:09,072</td>\n",
+       "      <td>2105</td>\n",
+       "      <td>Monica, can I talk to you behind my menu, plea...</td>\n",
+       "      <td>Phoebe</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>207</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>00:15:34,058</td>\n",
+       "      <td>00:15:36,017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7055</td>\n",
-       "      <td>Yeah, it is! Naked Ross!!</td>\n",
-       "      <td>All</td>\n",
-       "      <td>surprise</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>697</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>I'm not! This is what I'm doing now. I've got ...</td>\n",
+       "      <td>Rachel</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>204</td>\n",
        "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>14</td>\n",
-       "      <td>00:15:14,872</td>\n",
-       "      <td>00:15:18,207</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>00:07:52,805</td>\n",
+       "      <td>00:07:56,308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>617</td>\n",
-       "      <td>You are!</td>\n",
-       "      <td>Danny</td>\n",
-       "      <td>joy</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>55</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0:11:35,861</td>\n",
-       "      <td>0:11:36,373</td>\n",
+       "      <td>6567</td>\n",
+       "      <td>OK, that's enough of the view. Check this out,...</td>\n",
+       "      <td>Chandler</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>neutral</td>\n",
+       "      <td>653</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>00:15:21,712</td>\n",
+       "      <td>00:15:27,675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6659</td>\n",
-       "      <td>Uh, Carol teaches sixth grade.</td>\n",
-       "      <td>Ross</td>\n",
+       "      <td>4888</td>\n",
+       "      <td>Yeah, yeah I got that.</td>\n",
+       "      <td>Phoebe</td>\n",
        "      <td>neutral</td>\n",
        "      <td>neutral</td>\n",
-       "      <td>659</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>00:15:59,083</td>\n",
-       "      <td>00:16:01,417</td>\n",
+       "      <td>499</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>00:05:05,763</td>\n",
+       "      <td>00:05:07,514</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -215,73 +216,73 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4896</th>\n",
-       "      <td>3389</td>\n",
-       "      <td>The cameras? Remember last night I told you to...</td>\n",
-       "      <td>Chandler</td>\n",
-       "      <td>surprise</td>\n",
+       "      <td>5662</td>\n",
+       "      <td>Hey, that's never gonna make it all the way ov...</td>\n",
+       "      <td>Joey</td>\n",
+       "      <td>anger</td>\n",
        "      <td>negative</td>\n",
-       "      <td>337</td>\n",
-       "      <td>7</td>\n",
+       "      <td>571</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
        "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>00:03:18,656</td>\n",
-       "      <td>00:03:20,699</td>\n",
+       "      <td>00:21:28,787</td>\n",
+       "      <td>00:21:33,332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4897</th>\n",
-       "      <td>892</td>\n",
-       "      <td>Hi.</td>\n",
-       "      <td>Monica</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>87</td>\n",
+       "      <td>5830</td>\n",
+       "      <td>Hey uh, I don't mean to be presumptuous but I ...</td>\n",
+       "      <td>Kyle</td>\n",
+       "      <td>fear</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>590</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>00:22:08,744</td>\n",
-       "      <td>00:22:09,744</td>\n",
+       "      <td>00:08:28,633</td>\n",
+       "      <td>00:08:33,803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4898</th>\n",
-       "      <td>8295</td>\n",
-       "      <td>I mean come on, that is just noise!</td>\n",
-       "      <td>Monica</td>\n",
+       "      <td>6449</td>\n",
+       "      <td>In my defense, it was dark and he was a very p...</td>\n",
+       "      <td>Chandler</td>\n",
        "      <td>anger</td>\n",
        "      <td>negative</td>\n",
-       "      <td>833</td>\n",
-       "      <td>4</td>\n",
+       "      <td>644</td>\n",
        "      <td>7</td>\n",
-       "      <td>15</td>\n",
-       "      <td>00:07:52,430</td>\n",
-       "      <td>00:07:55,307</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>00:13:40,361</td>\n",
+       "      <td>00:13:44,572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4899</th>\n",
-       "      <td>7370</td>\n",
-       "      <td>Wait uh, listen.</td>\n",
-       "      <td>Ross</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>736</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3804</td>\n",
+       "      <td>Joey. Joey, something feels weird and not good...</td>\n",
+       "      <td>Rachel</td>\n",
+       "      <td>fear</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>383</td>\n",
        "      <td>4</td>\n",
-       "      <td>17</td>\n",
-       "      <td>00:09:36,367</td>\n",
-       "      <td>00:09:38,159</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>00:09:49,600</td>\n",
+       "      <td>00:09:54,080</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4900</th>\n",
-       "      <td>123</td>\n",
-       "      <td>All right, let's go! Bye, Pheebs!</td>\n",
-       "      <td>Ross</td>\n",
+       "      <td>9718</td>\n",
+       "      <td>Hey, Rach! How ya doin'?</td>\n",
+       "      <td>Chip</td>\n",
        "      <td>joy</td>\n",
        "      <td>positive</td>\n",
-       "      <td>11</td>\n",
-       "      <td>6</td>\n",
+       "      <td>965</td>\n",
+       "      <td>2</td>\n",
        "      <td>4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>00:03:32,503</td>\n",
-       "      <td>00:03:34,463</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0:13:00,071</td>\n",
+       "      <td>0:13:00,943</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,48 +291,48 @@
       ],
       "text/plain": [
        "      Sr No.                                          Utterance   Speaker  \\\n",
-       "0       3705                                                  !      Ross   \n",
-       "1       7477                                         Whoa what?    Rachel   \n",
-       "2       7055                          Yeah, it is! Naked Ross!!       All   \n",
-       "3        617                                           You are!     Danny   \n",
-       "4       6659                     Uh, Carol teaches sixth grade.      Ross   \n",
+       "0         56                               I'm so proud of you.      Ross   \n",
+       "1       2105  Monica, can I talk to you behind my menu, plea...    Phoebe   \n",
+       "2       2055  I'm not! This is what I'm doing now. I've got ...    Rachel   \n",
+       "3       6567  OK, that's enough of the view. Check this out,...  Chandler   \n",
+       "4       4888                             Yeah, yeah I got that.    Phoebe   \n",
        "...      ...                                                ...       ...   \n",
-       "4896    3389  The cameras? Remember last night I told you to...  Chandler   \n",
-       "4897     892                                                Hi.    Monica   \n",
-       "4898    8295                I mean come on, that is just noise!    Monica   \n",
-       "4899    7370                                   Wait uh, listen.      Ross   \n",
-       "4900     123                  All right, let's go! Bye, Pheebs!      Ross   \n",
+       "4896    5662  Hey, that's never gonna make it all the way ov...      Joey   \n",
+       "4897    5830  Hey uh, I don't mean to be presumptuous but I ...      Kyle   \n",
+       "4898    6449  In my defense, it was dark and he was a very p...  Chandler   \n",
+       "4899    3804  Joey. Joey, something feels weird and not good...    Rachel   \n",
+       "4900    9718                           Hey, Rach! How ya doin'?      Chip   \n",
        "\n",
-       "       Emotion Sentiment  Dialogue_ID  Utterance_ID  Season  Episode  \\\n",
-       "0      neutral   neutral          369             0       1       18   \n",
-       "1     surprise  negative          747             4       7       18   \n",
-       "2     surprise  negative          697             7       5       14   \n",
-       "3          joy  positive           55            11       5       10   \n",
-       "4      neutral   neutral          659            18       1       14   \n",
-       "...        ...       ...          ...           ...     ...      ...   \n",
-       "4896  surprise  negative          337             7       8        2   \n",
-       "4897   neutral   neutral           87             5       1        5   \n",
-       "4898     anger  negative          833             4       7       15   \n",
-       "4899   neutral   neutral          736             7       4       17   \n",
-       "4900       joy  positive           11             6       4       23   \n",
+       "      Emotion Sentiment  Dialogue_ID  Utterance_ID  Season  Episode  \\\n",
+       "0         joy  positive            4             9       3       11   \n",
+       "1     neutral   neutral          207            15       3       15   \n",
+       "2     neutral   neutral          204             7       1        4   \n",
+       "3     neutral   neutral          653             0       1       15   \n",
+       "4     neutral   neutral          499             9       6       25   \n",
+       "...       ...       ...          ...           ...     ...      ...   \n",
+       "4896    anger  negative          571            15       3        8   \n",
+       "4897     fear  negative          590             7       7        5   \n",
+       "4898    anger  negative          644             7       7        4   \n",
+       "4899     fear  negative          383             4       8       14   \n",
+       "4900      joy  positive          965             2       4        2   \n",
        "\n",
        "         StartTime       EndTime  \n",
-       "0     00:20:26,475  00:20:27,725  \n",
-       "1      0:08:08,237   0:08:09,072  \n",
-       "2     00:15:14,872  00:15:18,207  \n",
-       "3      0:11:35,861   0:11:36,373  \n",
-       "4     00:15:59,083  00:16:01,417  \n",
+       "0      0:20:40,614   0:20:41,991  \n",
+       "1     00:15:34,058  00:15:36,017  \n",
+       "2     00:07:52,805  00:07:56,308  \n",
+       "3     00:15:21,712  00:15:27,675  \n",
+       "4     00:05:05,763  00:05:07,514  \n",
        "...            ...           ...  \n",
-       "4896  00:03:18,656  00:03:20,699  \n",
-       "4897  00:22:08,744  00:22:09,744  \n",
-       "4898  00:07:52,430  00:07:55,307  \n",
-       "4899  00:09:36,367  00:09:38,159  \n",
-       "4900  00:03:32,503  00:03:34,463  \n",
+       "4896  00:21:28,787  00:21:33,332  \n",
+       "4897  00:08:28,633  00:08:33,803  \n",
+       "4898  00:13:40,361  00:13:44,572  \n",
+       "4899  00:09:49,600  00:09:54,080  \n",
+       "4900   0:13:00,071   0:13:00,943  \n",
        "\n",
        "[4901 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,22 +494,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gsevr\\AppData\\Local\\Temp\\ipykernel_18040\\2616501896.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['prepro'] = [' '.join([lemmatizer.lemmatize(preprocess(txt))])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def preprocess(text):\n",
     "    t = text.lower()\n",
@@ -526,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,16 +870,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5767441860465117"
+       "array([[144, 136,  31],\n",
+       "       [ 40, 257,  44],\n",
+       "       [ 49, 130, 150]], dtype=int64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +890,26 @@
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "\n",
     "confusion_matrix(df_val.Sentiment.values, p)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5902140672782875"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "accuracy_score(df_val.Sentiment.values, p)"
    ]
   },
